Material Design changes

--- a/RegularWebProject/MainPage.html
+++ b/RegularWebProject/MainPage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title></title>
     <link rel="stylesheet" type="text/css" href="Slider.css">
+    <link rel="stylesheet" type="text/css" href="MainPage.css">
 </head>
 <body class="yui3-skin-sam">
     <div>Hello World!</div>
@@ -14,6 +15,8 @@
             <span class="slider-thumb" tabindex="0"></span>
         </div>
     </div>-->
+    <div class="css-animation">test</div>
+
     <div class="yui-slider-test"></div>
 
     <script src="http://yui.yahooapis.com/3.18.1/build/yui/yui-min.js"></script>
