--- a/DigitalAppSample/DigitalApp.html
+++ b/DigitalAppSample/DigitalApp.html
@@ -2,9 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Digital App</title>
+    <link rel="stylesheet" href="DigitalApp.css" type="text/css" />
 </head>
-<body>
-$END$
-</body>
+    <body>
+        <div class="card-container">
+            <div class="card" data-expand-collapse></div>
+            <div class="card" data-ripple-effect></div>
+            <div class="card" data-ripple-effect></div>
+            <div class="card" data-ripple-effect></div>
+            <div class="card" data-ripple-effect></div>
+            <div class="card" data-ripple-effect></div>
+            <div class="card" data-ripple-effect></div>
+            <div class="card" data-ripple-effect></div>
+            <div class="card" data-ripple-effect></div>
+        </div>
+        <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.3.1/velocity.min.js" type="text/javascript"></script>
+        <script src="DigitalApp.js"></script>
+    </body>
 </html>
