--- a/DigitalAppSample/DigitalApp.html
+++ b/DigitalAppSample/DigitalApp.html
@@ -17,6 +17,7 @@
             <div class="card" data-ripple-effect></div>
             <div class="card" data-ripple-effect></div>
         </div>
+        <input type="text" class="input-mask" />
         <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.3.1/velocity.min.js" type="text/javascript"></script>
